[package]
name = "k8s-pb"
version = "0.1.0"
license = "Apache-2.0"
edition = "2018"
include = ["/openapi", "/protos", "./protos.fds", "protos.list", "justfile"]

[dependencies]
bytes = "1.0.1"
prost = "0.8.0"

[build-dependencies]
prost-build = "0.8.0"
prost-types = "0.8.0"
prost = "0.8.0"
serde_json = "1.0.67"
serde = { version = "1.0.130", features = ["derive"] }
