[workspace]
default-members = ["k8s-pb"]
members = [
  "k8s-pb-codegen",
  "k8s-pb"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
prost = "0.14.1"
prost-build = "0.14.1"
prost-types = "0.14.1"
quote = "1.0"
serde = "1.0.219"
serde_json = "1.0.140"
