[workspace]
default-members = ["k8s-pb"]
members = [
  "k8s-pb-codegen",
  "k8s-pb"
]
resolver = "2"

[workspace.package]
version = "2.0.1"
authors = [
  "clux <sszynrae@gmail.com>",
  "kazk <kazk.dev@gmail.com>",
]
repository = "https://github.com/kube-rs/k8s-pb"
readme = "README.md"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
prost = "0.14.1"
prost-build = "0.14.1"
prost-types = "0.14.1"
quote = "1.0"
serde = "1.0.219"
serde_json = "1.0.140"
