[package]
name = "k8s-pb-codegen"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
prost = { workspace = true }
prost-build = { workspace = true }
prost-types = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
quote = { workspace = true }
