[package]
name = "k8s-pb-codegen"
publish = false
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
prost = { workspace = true }
prost-build = { workspace = true }
prost-types = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
quote = { workspace = true }
