[package]
name = "k8s-pb"
description = "Bindings for the Kubernetes Client API"
keywords = ["kubernetes", "openapi", "protos"]
categories = ["network-programming", "caching", "api-bindings", "encoding"]
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
prost = { workspace = true }
